@@ -316,9 +316,9 @@ class Tx_Seminars_FrontEnd_DefaultController extends Tx_Oelib_TemplateHelper imp
 				$result = $categoryList->render();
 				break;
 			case 'event_headline':
-				/** @var tx_seminars_FrontEnd_EventHeadline $eventHeadline */
+				/** @var Tx_Seminars_FrontEnd_EventHeadline $eventHeadline */
 				$eventHeadline = GeneralUtility::makeInstance(
-					'tx_seminars_FrontEnd_EventHeadline',
+					Tx_Seminars_FrontEnd_EventHeadline::class,
 					$this->conf, $this->cObj
 				);
 				$eventHeadline->injectEventMapper($this->eventMapper);
