@@ -12,6 +12,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5550] Rename tx_seminars_FrontEnd_EventHeadline to Tx_Seminars_FrontEnd_EventHeadline
 - [#5549] Rename tx_seminars_FrontEnd_EventEditor to Tx_Seminars_FrontEnd_EventEditor
 - [#5577] Rename tx_seminars_OldModel_Abstract to Tx_Seminars_OldModel_Abstract
 - [#5576] Rename tx_seminars_Model_AbstractTimeSpan to Tx_Seminars_Model_AbstractTimeSpan
